fixed vertical alignment

--- a/style.css
+++ b/style.css
@@ -35,12 +35,17 @@ h2{
     margin-bottom: 0.5em;
 }
 .counter{
-    display: inline-block;
+    /* to align text vertically */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
     margin-top: 0.3em;
     font-size: 1.5em;
     font-weight: 600;
     border: 1px solid black;
     padding:5px 20px;
+    width: fit-content;
     border-radius: 10px;
     box-shadow: 0 0 3px;
 }
@@ -112,6 +117,7 @@ h2{
       border-radius: 10px;
       display: flex;
       justify-content: space-between;
+      align-items: center;
   }
   .world p{
       font-size: 0.8em;
